--- a/src/main/resources/templates/department_employee_info.html
+++ b/src/main/resources/templates/department_employee_info.html
@@ -6,6 +6,18 @@
 </head>
 <body>
 
+  <div>
+    <span><a th:href="@{/}">직원 검색하기</a></span>
+  </div>
+
+  <div>
+    <span><a th:href="@{/employee/create}">직원 추가하기</a></span>
+  </div>
+
+  <div>
+    <span><a th:href="@{/dependent}">직원별 가족 현황 보기</a></span>
+  </div>
+
 <div th:each="dept_emp_info, stat : ${DepartmentEmployeeInformationDto}">
   <h1 th:text="${dept_emp_info.departmentName}"></h1>
   <table>
